# newsbrief

./: .ci-test  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .webhook-test  =7.3.0  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Caddyfile.compose  Dockerfile  Makefile  README.md  alembic.ini  compose.dev.yaml  compose.prod.yaml  compose.windows.yaml  compose.yaml  cosign.pub  feeds.opml  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tailwind.config.js
.github/: pull_request_template.md
alembic/: env.py
ansible/: README.md  ansible.cfg
app/: __init__.py  _version.py  context_manager.py  credibility.py  credibility_import.py  datetime_utils.py  db.py  deps.py  embed_backfill.py  embedding_service.py  entities.py  extraction.py  failed_entities.py  feeds.py  feeds.py.bak  ingest_idempotency.py  interests.py  item_embeddings.py  llm.py  llm_output.py  logging_config.py  main.py  models.py  operator_audit.py  orm_models.py  pipeline_monitoring.py  pipeline_runner.py  processing_states.py  publish_gate.py  quality_metrics.py  ranking.py  readability.py  retention.py  rss.py  scheduler.py  settings.py  source_weights.py  stories.py  story_embeddings.py  synthesis_cache.py  (+1 more)
data/: db-migration.json  feeds.opml  interests.json  issues.json  labels-db.json  labels.json  model_config.json  settings.json  source_weights.json  story-architecture-issues.json  topics.json
docs/: API.md  ARCHITECTURE.md  BRANCHING_STRATEGY.md  DEVELOPMENT.md  DOCS_REORGANIZATION_PLAN.md  GITHUB_ISSUES_TO_CLOSE.md  GITHUB_PROJECT_BOARD_SETUP.md  HOUSEKEEPING_COMPLETE.md  HOUSEKEEPING_v0.5.5_to_v0.6.0.md  README.md  (+16 more)
(+351 files in other folders)
